@@ -6,26 +6,25 @@
 Development is discussed on
 
 <blockquote>
-<a
-href="http://mail.gnu.org/mailman/listinfo/lilypond-devel"
->lilypond-devel@gnu.org</a>.
+  <a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">lilypond-devel@gnu.org</a>.
 </blockquote>
-<p>
-Browse the archives <a
-href="http://mail.gnu.org/pipermail/lilypond-devel">here</a>.
 
+<p>
+  Browse the archives
+  <a href="http://mail.gnu.org/pipermail/lilypond-devel">here</a>.
+</p>
 
 <h2>Brilliant hackers</h2>
 
 We want our patches cooked as follows:
 
 <ul>
-<li>Follow the <a href=standards.html>coding standards.</a>.
-<li>No complete files, only diffs
-<li>Unified diff (<tt>diff -u</tt>). 
-<li>ChangeLog entries
-<li>patches for Documentation/topdocs/AUTHORS.texi and THANKS, if
-appropriate
+  <li>Follow the <a href=standards.html>coding standards.</a>.
+  <li>No complete files, only diffs
+  <li>Unified diff (<tt>diff -u</tt>). 
+  <li>ChangeLog entries
+  <li>patches for Documentation/topdocs/AUTHORS.texi and THANKS, if
+    appropriate
 </ul>
 
 
@@ -39,56 +38,53 @@ example, you could
 
 
 <ul>
-<li>
- help translating. See
- <a
- href="http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond">
-  http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond</a>
+  <li>help translating.  See
+    <a
+       href="http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond">
+      http://www2.iro.umontreal.ca/~pinard/po/registry.cgi?domain=lilypond</a>
+
+  <li>
+    help proofreading and editing the documentation. The user manual is
+    found in <tt>lilypond/Documentation/user/</tt>, in the
+    <tt>*.itely</tt> files.
+    
+  <li>
+    help <a href=../packaging.html>packaging</a>.
+
+  <li> help entering music for the
+    <a href=http://www.mutopiaproject.org/>Mutopia project</a>.
 
 <li>
- help proofreading and editing the documentation. The user manual is
- found in <tt>lilypond/Documentation/user/</tt>, in the
- <tt>*.itely</tt> files.
- 
-<li>
- help <a href=../packaging.html>packaging</a>.
-
-<li>
- help entering music for the <a
- href=http://www.mutopiaproject.org/>Mutopia project</a>.
-
-<li>
- jazz up our website. It is available from CVS: run
- <pre>
-  cvs -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond login
-  cvs -z3 -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
- </pre>
+  jazz up our website.  It is available from CVS, run
+  <pre>
+    cvs -z3 -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
+  </pre>
 </ul>
 
 <h2>Submitting patches</h2>
 <p>
-If you want to contribute fixes of any kind, use the following
-procedure:
-
+  If you want to contribute fixes of any kind, use the following
+  procedure
+</p>
 <ul>
-<li>Check out the latest sources from <a
-href="http://savannah.gnu.org/cvs/?group=lilypond">CVS</a>.
+  <li>Check out the latest sources from
+    <a href="http://savannah.gnu.org/cvs/?group=lilypond">CVS</a>.
 
-<li>Make your changes,
+    <pre>
+      cvs -z3 -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co lilypond
+    </pre>
 
-<li>Add an entry to the <tt>ChangeLog</tt> file (In Emacs: <tt>C-x 4 a</tt>)
+  <li>Make your changes,
 
-<li> Create a patch:
-<xmp>
-  cd lilypond/   # go to the top of the source tree 
-  cvs diff -u > patch
-</xmp>
+  <li>Add an entry to the <tt>ChangeLog</tt> file (In Emacs: <tt>C-x 4 a</tt>)
 
-<li>Send an email with the ChangeLog at the top, and the patch
-attached to <tt>lilypond-devel@gnu.org</tt>, or to one of the
-maintainers.
-
+  <li>Create a patch:
+    <pre>
+      cd lilypond/   # go to the top of the source tree 
+      cvs diff -u &gt; patch
+    </pre>
+    
+  <li>Send an email with the ChangeLog at the top, and the patch
+    attached to <tt>lilypond-devel@gnu.org</tt>, or to one of the
+    maintainers.
 </ul>
-<xmp>
-  
-</xmp>
