@@ -1,3 +1,8 @@
+2004-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/devel/participating/index.html (procedure): Add CVS
+	checkout procedure for sources.  Remove deprecated login option.
+
 2004-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile (TAGS): New target.
